# RobotPublic

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json.sample  CMakeSettings.json.sample  Code Style.md  Configuration.md  README.md  config.h.in
cmake/: Info.plist  (+15 more)
src/gui/: CMakeLists.txt  README.md  app_flag.h  app_manager.cpp  app_manager.h  app_system.cpp  app_system.h  contexteditor.qrc  halio.cpp  halio.h  main.cpp  mode_var.cpp  mode_var.h  myapp.rc  selectmodehelper.cpp  selectmodehelper.h  viewer_observer.cpp  viewer_observer.h  viewer_utils.cpp  viewer_utils.h  viewerwrapper.h  viewnode.cpp  viewnode.h  viewnode_utils.cpp  viewnode_utils.h  viewrobot.cpp  viewrobot.h
src/gui/command/: README.md  cmd_base.cpp  cmd_base.h  cmd_changecontext.cpp  cmd_changecontext.h  cmd_configrobot.cpp  cmd_configrobot.h  cmd_drawdemo.cpp  cmd_drawdemo.h  cmd_exportfile.cpp  cmd_exportfile.h  cmd_importfie.cpp  cmd_importfile.h  cmd_move.cpp  cmd_move.h  cmd_move.ui  cmd_move_ui.cpp  cmd_move_ui.h  cmd_newcontext.cpp  cmd_newcontext.h  cmd_remove.cpp  cmd_remove.h  cmd_removecontext.cpp  cmd_removecontext.h  cmd_robotfor.cpp  cmd_robotfor.h  cmd_robotfor.ui  cmd_robotmove.cpp  cmd_robotmove.h  cmd_robotmove.ui  cmd_ruler.cpp  cmd_ruler.h  cmd_setting.cpp  cmd_setting.h  cmd_setting.ui  cmd_showinfo.cpp  cmd_showinfo.h  cmd_showinfo.ui  cmd_viewerpan.cpp  cmd_viewerpan.h  (+12 more)
src/gui/frameutils/: qtutils.cpp  qtutils.h
src/gui/icons/: robot.icns
src/gui/test/: CMakeLists.txt  main.cpp  test_gui.cpp
src/gui/ui/: app_mode_dock.cpp  app_mode_dock.h  app_mode_dock.ui  cmd_dock.cpp  cmd_dock.h  file_explore_dock.cpp  file_explore_dock.h  file_widget.cpp  file_widget.h  file_widget.ui  gui_controls.cpp  gui_controls.h  gui_controls.ui  gui_positions.cpp  gui_positions.h  gui_positions.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  select_mode_widget.cpp  select_mode_widget.h  select_mode_widget.ui  viewerwidget.cpp  viewerwidget.h  viewerwidget.ui
src/rfapp/: CMakeLists.txt  app_settings.cpp  app_settings.h  apptheme.cpp  apptheme.h  delegate.h  observer.h  revoke.cpp  revoke.h  rfFilepath.h  rfProperty.cpp  rfProperty.h  rfPropertyGeneric.cpp  rfPropertyGeneric.h  rfPropertyGroup.cpp  rfPropertyGroup.h  rfquantity.cpp  rfquantity.h  rfsignal.cpp  rfsignal.h  rfunit.cpp  rfunit.h  rfunit_system.cpp  rfunit_system.h  task_manager.cpp  task_manager.h  task_progress.cpp  task_progress.h  textid.cpp  textid.h
src/rfapp/test/: CMakeLists.txt  test_property.cpp  test_setting.cpp  test_textid.cpp
src/rfbase/: CMakeLists.txt  concurrent_unionset.h  concurrent_utils.h  datautils.cpp  datautils.h  meta_enum.h  ratiohelper.cpp  ratiohelper.h  rfArrayStack.h  rfBigInt.cpp  rfBigInt.h  rfSigUtils.cpp  rfSigUtils.h  rfTimeLimit.cpp  rfTimeLimit.h  rfTimer.cpp  rfTimer.h  rfUndoableObjects.cpp  rfUndoableObjects.h  rfanimecontroler.cpp  rfanimecontroler.h  rfdefine.cpp  rfdefine.h  rfidtree.h  rfjson.cpp  rfjson.h  rfmath.cpp  rfmath.h  rfsingleton.h  rfspan.h  unionset_basic.cpp  unionset_basic.h
src/rfbase/test/: CMakeLists.txt  test_bigint.cpp  test_conutils.cpp  test_datatools.cpp  test_json.cpp  test_mathutils.cpp  test_multiunionset.cpp  test_span.cpp  test_timer.cpp  test_tree.cpp  test_undoableobj.cpp
src/rfdb/: CMakeLists.txt  dbAssembly.cpp  dbAssembly.h  dbCommon.h  dbLabelTree.cpp  dbLabelTree.h  dbMesh.cpp  dbMesh.h  dbPart.cpp  dbPart.h  dbPointCloud.cpp  dbPointCloud.h  dbProperty.cpp  dbProperty.h  dbRobot.cpp  dbRobot.h  dbRobotDefine.h  dbTrace.cpp  dbTrace.h  dbTrajectory.cpp  dbTrajectory.h  dbVariant.cpp  dbVariant.h
src/rfdb/dbutils/: dbVariantUtils.cpp  dbVariantUtils.h  dbcheck.cpp  dbcheck.h  dbpartutils.cpp  dbpartutils.h  shapebuilder.cpp  shapebuilder.h
src/rfdb/test/: CMakeLists.txt  test_db.cpp  test_dbcheck.cpp  test_dbpart.cpp  test_dbproperty.cpp  test_dbutil.cpp  test_shapebuilder.cpp
src/rfgeo3d/: CMakeLists.txt  geodataio.cpp  geodataio.h  geoutils.cpp  geoutils.h  shapeutils.cpp  shapeutils.h  stdafx.h  vmselectmode.cpp  vmselectmode.h  vmutils.cpp  vmutils.h  vsbuilder.cpp  vsbuilder.h
src/rfgeo3d/test/: CMakeLists.txt  main.cpp  test_geodataio.cpp  test_geoutils.cpp  test_shapeutils.cpp  test_viewdataio.cpp
src/rfgraphics/: CMakeLists.txt  ais_text.cpp  ais_text.h  graphics_create_driver.cpp  graphics_create_driver.h  graphics_create_virtual_window.cpp  graphics_create_virtual_window.h  graphics_object_ptr.h  graphics_owner_ptr.h  graphics_scene.cpp  graphics_scene.h  graphics_texture2d.h  graphics_utils.cpp  graphics_utils.h  graphics_view_ptr.h  gui_vkey_mouse.h  occ_handle.h  occt_window.cpp  occt_window.h  rfviewer.cpp  rfviewer.h  rfviewernew.cpp  rfviewernew.h  rfviewevent.h  system_type.h  tkernel_utils.cpp  tkernel_utils.h  v3d_view_camera_animation.cpp  v3d_view_camera_animation.h  v3d_view_controller.cpp  v3d_view_controller.h  widget_occ_view.cpp  widget_occ_view.h  widget_occ_view_controller.cpp  widget_occ_view_controller.h  widget_occ_view_impl.cpp  widget_occ_view_impl.h
src/rfgraphics/driver/: graphics_mesh_data_source.cpp  graphics_mesh_data_source.h  (+8 more)
src/rfio/: CMakeLists.txt  assimpreader.cpp  assimpreader.h  brep_utils.cpp  brep_utils.h  graphics_mesh_data_source.cpp  graphics_mesh_data_source.h  io_format.cpp  io_format.h  mesh_utils.cpp  mesh_utils.h  occ_progress_indicator.cpp  occ_progress_indicator.h  reader_base.h  reader_brep.cpp  reader_brep.h  reader_factory.cpp  reader_factory.h  reader_ply.cpp  reader_ply.h  reader_robot.cpp  reader_robot.h  reader_step.cpp  reader_step.h  reader_trace.cpp  reader_trace.h  reader_trajectory.cpp  reader_trajectory.h  stdafx.h  tkernel_utils.cpp  tkernel_utils.h  writer_base.h  writer_brep.cpp  writer_brep.h  writer_robot.cpp  writer_robot.h  writer_trace.cpp  writer_trace.h  writer_trajectory.cpp  writer_trajectory.h
src/rflog/: CMakeLists.txt  rfLog.cpp  rfLog.h  rfLogEntries.cpp  rfLogEntries.h  rfLogEntryType.h  rfLogListWidget.cpp  rfLogListWidget.h
src/rfrobot/: CMakeLists.txt  rfGenerateLs.cpp  rfGenerateLs.h  rfRobotDefine.h  rfRobotUtils.cpp  rfRobotUtils.h
(+71 files in other folders)
